# pyBlockMethod

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-test.txt  setup.py
.claude/commands/: init.md
.github/workflows/: tests.yml
context/summaries/: 1_codebase_structure.md  2_volkov_solver.md  3_visualizations.md  4_tests.md
examples/: biological_polygon.py  complex_polygon.py  e_shaped_polygon.py  multiple_holes_test.py  random_polygons.py  simple_polygon.py  simple_square.py  simple_square_with_hole.py  triangular_ramp.py
src/pyBlockGrid/: __init__.py
tests/: conftest.py  generate_reference_data.py  run_examples.py  test_accuracy.py  test_solver.py
tests/reference_data/: l_shape_n10_rad0.85_ovl0.1_hot_bottom.npz  l_shape_n10_rad0.85_ovl0.1_hot_left.npz  l_shape_n10_rad0.85_ovl0.1_mixed.npz  l_shape_n10_rad0.85_ovl0.2_hot_bottom.npz  l_shape_n10_rad0.85_ovl0.2_hot_left.npz  l_shape_n10_rad0.85_ovl0.2_mixed.npz  l_shape_n10_rad0.85_ovl0.4_hot_bottom.npz  l_shape_n10_rad0.85_ovl0.4_hot_left.npz  l_shape_n10_rad0.85_ovl0.4_mixed.npz  l_shape_n10_rad0.95_ovl0.1_hot_bottom.npz  l_shape_n10_rad0.95_ovl0.1_hot_left.npz  l_shape_n10_rad0.95_ovl0.1_mixed.npz  l_shape_n10_rad0.95_ovl0.2_hot_bottom.npz  l_shape_n10_rad0.95_ovl0.2_hot_left.npz  l_shape_n10_rad0.95_ovl0.2_mixed.npz  l_shape_n10_rad0.95_ovl0.4_hot_bottom.npz  l_shape_n10_rad0.95_ovl0.4_hot_left.npz  l_shape_n10_rad0.95_ovl0.4_mixed.npz  l_shape_n20_rad0.85_ovl0.1_hot_bottom.npz  l_shape_n20_rad0.85_ovl0.1_hot_left.npz  l_shape_n20_rad0.85_ovl0.1_mixed.npz  l_shape_n20_rad0.85_ovl0.2_hot_bottom.npz  l_shape_n20_rad0.85_ovl0.2_hot_left.npz  l_shape_n20_rad0.85_ovl0.2_mixed.npz  l_shape_n20_rad0.85_ovl0.4_hot_bottom.npz  l_shape_n20_rad0.85_ovl0.4_hot_left.npz  l_shape_n20_rad0.85_ovl0.4_mixed.npz  l_shape_n20_rad0.95_ovl0.1_hot_bottom.npz  l_shape_n20_rad0.95_ovl0.1_hot_left.npz  (+43 more)
(+16 files in other folders)
